objects/Exception_DTI_Guideline__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>DTI__c</fullName>
        <inlineHelpText>DTI Min Value</inlineHelpText>
        <label>DTI</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LTV__c</fullName>
        <inlineHelpText>LTV Min Value</inlineHelpText>
        <label>LTV</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Status should have one of the 3 values: "Yes", "No", "Exception".</inlineHelpText>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Exception DTI Guideline</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>DTI__c</columns>
        <columns>LTV__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>